website-db-vault-kaf-redis-arg-kust-kyv-elk-apm-sprig-sp01/kyverno-policies/kyverno-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: davtro-baseline-policy
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: require-ghcr-images
      match:
        any:
          - resources:
              kinds: [Pod]
              namespaces: [davtro]
      validate:
        message: "Obrazy kontenerów w namespace 'davtro' muszą pochodzić z ghcr.io lub zaufanych rejestrów (bitnami, postgres, redis itd. na potrzeby usług pomocniczych)."
        pattern:
          spec:
            containers:
              - image: "*"
    - name: require-resource-requests-limits
      match:
        any:
          - resources:
              kinds: [Pod]
              namespaces: [davtro]
      validate:
        message: "Każdy kontener musi mieć zdefiniowane requests/limits."
        pattern:
          spec:
            containers:
              - resources:
                  requests:
                    cpu: "?*"
                    memory: "?*"
                  limits:
                    cpu: "?*"
                    memory: "?*"
    - name: disallow-privileged
      match:
        any:
          - resources:
              kinds: [Pod]
              namespaces: [davtro]
      validate:
        message: "Kontenery uprzywilejowane (privileged) są niedozwolone."
        pattern:
          spec:
            =(securityContext):
              =(privileged): "false"
